# aether4

./: .envrc  .gdb_history  .gitignore  Makefile  README.md  aether4.opam  dune-project  example_syntax  justfile  script.py  sum  sum.c0
.zed/: tasks.json
compiler/bench/: dune  main.ml  runner.sh
compiler/bench/src/: bench.ml  dune
compiler/cmd/: cmd.ml  cmd.mli  dune
compiler/cram_test/: cram_variables.t  dune  first.t  second.t  sleep.t
compiler/cram_test/directory.t/: run.t  some_files
compiler/cram_test/simple_addition.t/: add.c0  run.t
compiler/cram_test/simple_arithmetic.t/: add.c0  first.c0  run.t
compiler/filetests/examples/: arithmetic_register_pressure.c0  gen_severe_register_pressure.py
compiler/filetests/filetests/: add.c0  arith.c0  dune  first.c0  second.c0  single_return.c0  var_not_found.c0
compiler/filetests/filetests/l2/: ash-BaseConversion.c0  ash-BitSequence.c0  ash-Combinations.c0  ash-FibonacciMatrix.c0  ash-For.c0  ash-Logic.c0  ash-Manhatten.c0  ash-NextPowerOfTwo.c0  ash-NoException.c0  ash-NthPrime.c0  ash-PartialOrder.c0  ash-While.c0  ash-error01.c0  ash-error02.c0  ash-exception01.c0  ash-exception02.c0  ash-forloops.c0  ash-sumN.c0  cedar-anastulate.c0  cedar-anusulate.c0  cedar-ezThreeFourths.c0  cedar-float_abs.c0  cedar-float_f2i-neg.c0  cedar-float_f2i.c0  cedar-for-error.c0  cedar-for-exception.c0  cedar-for-fuxage.c0  cedar-if-exception.c0  cedar-inloop-no.c0  cedar-random-fuxage-simple.c  cedar-random-fuxage-simple.c0  cedar-random-fuxage.c0  cedar-satmul.c0  cedar-short-circuit.c0  maple-bitcount.c0  maple-catalan.c0  maple-collatz.c0  maple-dsum.c0  maple-encode.c0  maple-error.c0  (+17 more)
compiler/filetests/filetests/l2_converted/: ash-NthPrime.c0  ash-PartialOrder.c0  cedar-anastulate-exn.c0  cedar-dce-must-be-owned-part-2.c0  cedar-float_abs.c0  cedar-float_f2i.c0  cedar-for-fuxage.c0  cedar-forerror-2.c0  cedar-forerror.c0  cedar-if-short-circuit.c0  cedar-isNonZero.c0  cedar-leftBitCount.c0  cedar-noreturn-error.c0  cedar-satMul3.c0  elm-error01.c0  elm-error02.c0  elm-error03.c0  elm-error04.c0  elm-error05.c0  elm-error06.c0  elm-error07.c0  elm-exception01.c0  elm-exception02.c0  elm-exception03.c0  elm-if01.c0  elm-if02.c0  elm-if03.c0  elm-if04.c0  elm-if05.c0  elm-return-10.c0  elm-return01.c0  elm-return02.c0  elm-return03.c0  fir-badfor01.c0  fir-badfor02.c0  fir-badfor03.c0  fir-badfor04.c0  fir-binops01.c0  (+32 more)
compiler/filetests/generate_dune_rules/: dune  filetests_generate_dune_rules.ml
compiler/filetests/runner/: dune  filetests_options.ml  filetests_runner.ml  filetests_test_options.ml
compiler/filetests/src/: aether4_filetests.ml  dune  filetests_run.ml  filetests_run.mli
compiler/functional/: dune  functional.ml  functional_fold.ml  functional_fold.mli  functional_iter.ml  functional_iter.mli  functional_map.ml  functional_map.mli  functional_traverse.ml  functional_traverse.mli
compiler/parsec/: parsec.ml  parsec.mli  parsec_intf.ml
compiler/ppx_pattern/src/: dune  ppx_pattern.ml
compiler/ppx_pattern/test/: dune  first_test.t
compiler/ppx_pattern/test/smoke.t/: input.ml  run.t
compiler/sexp_lang/lib/: dune  pretty.ml  pretty.mli
compiler/src/: ae_abs_x86_check.ml  ae_abs_x86_check.mli  ae_abs_x86_check_register_pressure.ml  ae_abs_x86_check_register_pressure.mli  ae_abs_x86_destruct_ssa.ml  ae_abs_x86_destruct_ssa2.ml  ae_abs_x86_driver.ml  ae_abs_x86_driver.mli  ae_abs_x86_frame_layout.ml  ae_abs_x86_frame_layout.mli  ae_abs_x86_legalize.ml  ae_abs_x86_legalize.mli  ae_abs_x86_liveness.ml  ae_abs_x86_liveness.mli  ae_abs_x86_lower_flat_x86.ml  ae_abs_x86_lower_flat_x86.mli  ae_abs_x86_post_spill.ml  ae_abs_x86_post_spill.mli  ae_abs_x86_pre_spill.ml  ae_abs_x86_pre_spill.mli  ae_abs_x86_pretty.ml  ae_abs_x86_pretty.mli  ae_abs_x86_regalloc.ml  ae_abs_x86_regalloc.mli  ae_abs_x86_regalloc_treescan.ml  ae_abs_x86_regalloc_treescan.mli  ae_abs_x86_repair.ml  ae_abs_x86_repair.mli  ae_abs_x86_spill_post.ml  ae_abs_x86_spill_post.mli  ae_abs_x86_spill_slow.ml  ae_abs_x86_std.ml  ae_abs_x86_types.ml  ae_abs_x86_types0.ml  ae_abs_x86_use_defs.ml  ae_args.ml  ae_args.mli  ae_array_utils.ml  ae_array_utils.mli  ae_block_call.ml  (+169 more)
compiler/std/: dune  std.ml  std_lstack.ml  std_lstack.mli  std_vec.ml  std_vec.mli
compiler/test/: dune  test_abs_x86.ml  test_abs_x86_import.ml  test_abs_x86_liveness.ml  test_abs_x86_regalloc.ml  test_abs_x86_regalloc_spill_instr.ml  test_array_utils.ml  test_bounded_heap.ml  test_c0_elaborate_ast.ml  test_c0_lexer.ml  test_c0_lower_tir.ml  test_c0_parser.ml  test_data_bitset.ml  test_data_bitvec.ml  test_dfs.ml  test_dominators.ml  test_graph_greedy_regalloc.ml  test_lir_lower_abs_x86.ml  test_liveness.ml  test_lower.ml  test_lower_tir.ml  test_next_use.ml  test_process.ml  test_sequentialize_parallel_move.ml  test_tir_convert_ssa.ml  test_tir_split_critical.ml  test_tir_struct_layout.ml  weird_issue_with_functor_arguments.ml
docs/: README.md  architecture.md  papers.md  style.md  tests.md
functional/: dune  functional_iter.ml  functional_iter.mli
lib/: ae_c0_cst.ml  ae_c0_lexer.ml  ae_c0_lexer_gen.mll  ae_c0_lower_tir.ml  ae_c0_lower_tir.mli  ae_c0_std.ml  ae_data_append.ml  ae_data_append.mli  ae_data_bag.ml  ae_data_graph_std.ml  ae_data_graph_types.ml  ae_data_utils.ml  ae_data_utils.mli  ae_dataflow.ml  ae_entity_doubly_linked.ml  ae_entity_id.ml  ae_entity_intern.ml  ae_entity_map.ml  ae_entity_map.mli  ae_entity_map_intf.ml  ae_entity_name.ml  ae_entity_public.ml  ae_entity_public.mli  ae_entity_set.ml  ae_entity_std.ml  ae_entity_table.ml  ae_entity_witness.ml  ae_graph_greedy_regalloc.ml  ae_graph_greedy_regalloc.mli  ae_label_entity.ml  ae_lir.ml  ae_lir_std.ml  ae_lir_types.ml  ae_pre_x86_std.ml  ae_pre_x86_types.ml  ae_signatures.ml  ae_structures.mli  ae_tir.ml  ae_tir_lower_lir.ml  ae_tir_lower_lir.mli  (+4 more)
parsec/: dune  parsec.ml  parsec.mli
runtime/: build.zig  dune
runtime/src/: Scheduler.zig  asm_bits.s  context.zig  deque.zig  main.zig
runtime/test_utils/: lib.zig
scripts/: x
std/: dune  std.ml  std_vec.mli
test/: dune
x/: dune  x.ml
(+188 files in other folders)
