(rule
 (targets libc0_runtime.a)
 (deps zig-out)
 (action
  (copy zig-out/lib/libc0_runtime.a libc0_runtime.a)
 )
)

(rule
  (targets (dir zig-out) (dir .zig-cache))
  (mode promote)
  (deps (source_tree .zig-cache) build.zig (source_tree src))
  (action
    (progn
      (run zig build)
    )
  )
)
