(rule
 (targets libc0_runtime.a)
 (deps zig-out)
 (action
  (copy zig-out/lib/libc0_runtime.a libc0_runtime.a)
 )
)

(rule
 (targets libc0_test_utils.a)
 (deps zig-out)
 (action
  (copy zig-out/lib/libc0_test_utils.a libc0_test_utils.a)
 )
)

(rule
  (targets (dir zig-out) (dir .zig-cache))
  (mode promote)
  (deps build.zig (source_tree src) (source_tree test_utils))
  (action
    (progn
      (run zig build)
    )
  )
)
