(ocamllex ae_c0_lexer_gen)

(library
 (name aether4)
 (inline_tests)
 (flags
  ; turn pattern matching into error 
  (:standard -warn-error -A+8 -w -23))
 (preprocess
  (pps
   ppx_jane
   ppx_deriving.enum
   -log-source-position
   ppx_partial))
 (libraries
  parsec
  sexp_lang
  std
  core
  core_kernel
  containers-data
  core_unix
  core_unix.filename_unix
  core_unix.command_unix
  zarith
  int_repr
  cmdliner
  eio
  eio_main
  digestif.c
  base64
  ))