(executable
 (public_name filetests_runner)
 (name filetests_runner)
 (flags
  ; turn pattern matching into error 
  (:standard -warn-error -A+8 -w -23))
 (preprocess
  (pps ppx_jane))
 (libraries std core_unix core_unix.sys_unix))
 
(rule
 (target libc0_runtime.a)
  (action
   (copy %{project_root}/runtime/libc0_runtime.a libc0_runtime.a)
  )
)