(library
 (name aether4_filetests)
 (inline_tests
   (deps (source_tree ../filetests))
 )
 (flags
  ; turn pattern matching into error 
  (:standard -warn-error -A+8 -w -23))
 (preprocess
  (pps
   ppx_jane
   ppx_inline_test
   -log-source-position))
 (libraries
  aether4
  std
  eio
  eio_main
  digestif.c
  base64
  ))
